--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <a href="#projeto">O PROJETO</a>
         <a href="#equipe">A EQUIPE</a>
         <a href="#seduckathon">SEDUCKATHON</a>
-        <a href="#">LOGIN</a>
+        <!--<a href="#">LOGIN</a>-->
     </nav>
     <section id="imagem">
-        <img src="parqueserradacapivara.jpg"
+        <img src="logo_delta.png">
     </section>
     <section id="projeto">
         <h1>#O PROJETO</h1>
