--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--<a href="#">LOGIN</a>-->
     </nav>
     <section id="imagem">
-        <img src="logo_delta.png">
+        <img src="inicio_com_logo.png">
     </section>
     <section id="projeto">
         <h1>#O PROJETO</h1>
@@ -86,7 +86,7 @@
         
     </section>
     <footer>
-        <p>Desenvolvido pela equipe - 06/05/2025.</p>
+        <p>Desenvolvido pela equipe - 2025.</p>
         <p>Todos os direitos reservados.</p>
     </footer>
 </body>
