--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#projeto">O PROJETO</a>
         <a href="#equipe">A EQUIPE</a>
         <a href="#seduckathon">SEDUCKATHON</a>
-        <!--<a href="#">LOGIN</a>-->
+        <a href="#">JOGAR</a>-->
     </nav>
     <section id="imagem">
         <img src="inicio_com_logo.png">
