--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <footer>
         <p>Desenvolvido pela equipe - 2025.</p>
         <p>Todos os direitos reservados.</p>
-        <a href="https://www.instagram.com/deltarpgpi?igsh=MXNocW5mMHZwY3FuYQ=="><img scr="insta_logo.png"></a>
+        <a href="https://www.instagram.com/deltarpgpi?igsh=MXNocW5mMHZwY3FuYQ=="><img src="insta_logo.png"></a>
     </footer>
 </body>
 </html>
