--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
             <div class="arquitetos-cards">
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="assets/persona.jpg" alt="">
+                        <img src="persona.jpg" alt="">
                     </div>
 
                     <div class="card-name">
-                        <h4>Evellyn</h4>
+                        <h4>Evelyn</h4>
                         <h5>Orientadora</h5>
                     </div>
                         
@@ -109,7 +109,7 @@
 
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="assets/persona.jpg" alt="">
+                        <img src="persona.jpg" alt="">
                     </div>
 
                     <div class="card-name">
@@ -120,7 +120,7 @@
 
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="assets/persona.jpg" alt="">
+                        <img src="persona.jpg" alt="">
                     </div>
 
                     <div class="card-name">
@@ -130,7 +130,7 @@
                 </div>
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="assets/persona.jpg" alt="">
+                        <img src="persona.jpg" alt="">
                     </div>
 
                     <div class="card-name">
@@ -141,7 +141,7 @@
                 </div>
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="assets/persona.jpg" alt="">
+                        <img src="persona.jpg" alt="">
                     </div>
 
                     <div class="card-name">
@@ -152,7 +152,7 @@
                 </div>
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="assets/persona.jpg" alt="">
+                        <img src="persona.jpg" alt="">
                     </div>
 
                     <div class="card-name">
@@ -210,13 +210,13 @@
             </div>
             <div class="game-cards">
                 <div class="game-card">
-                    <img src="assets/Banner.jpg" alt="">
+                    <img src="Banner.jpg" alt="">
                 </div>
                 <div class="game-card">
-                    <img src=assets/Banner.jpg alt="">
+                    <img src=Banner.jpg alt="">
                 </div>
                 <div class="game-card">
-                    <img src="assets/Banner.jpg" alt="">
+                    <img src="Banner.jpg" alt="">
                 </div>
             </div>
         </section>
