--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
             <!-- Removido o botão hamburger -->
             <ul id="nav-list">
                 <li><a href="#home">Início</a></li>
-                <li><a href="#">Origem</a></li>
+                <li><a href="#about">Origem</a></li>
                 <li><a href="#arquitetos">Equipe</a></li>
-                <li><a href="#features">Características</a></li>
-                <li><a href="#heroes">Heróis</a></li>
-                <li><a href="#gallery">Galeria</a></li>
+                <li><a href="#game">Game</a></li>
                 <li><a href="#community">Comunidade</a></li>
             </ul>
         </nav>
@@ -31,7 +29,7 @@
     <main>
 
         <div class="hero-banner">
-            <h1>Onde a Matemática é a sua Magia!</h1>
+            <h1>Matemática não precisa ser um monstro. Pode ser uma jornada!</h1>
             <p>Embarque em uma aventura épica de RPG e use o poder dos números para mudar tudo, derrotar a dificuldade e se tornar uma lenda.</p>
             <div>
                 <button class="btn-primary">Baixar DeltaRpg</button>
@@ -39,7 +37,7 @@
             </div>
         </div>
 
-        <section class="about">
+        <section id="about" class="about">
             <div class="text">
                 <h2>A Origem do Projeto: Do Desafio à Solução com RPG</h2>
                 <p>
@@ -97,19 +95,19 @@
             <div class="arquitetos-cards">
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="persona.jpg" alt="">
+                        <img src="Evelyn1.jpeg" alt="">
                     </div>
 
                     <div class="card-name">
                         <h4>Evelyn</h4>
-                        <h5>Orientadora</h5>
+                        <h5>Professora</h5>
                     </div>
                         
                 </div>
 
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="persona.jpg" alt="">
+                        <img src="Aurelio2.jpeg" alt="">
                     </div>
 
                     <div class="card-name">
@@ -120,7 +118,7 @@
 
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="persona.jpg" alt="">
+                        <img src="Kelson1.jpeg" alt="">
                     </div>
 
                     <div class="card-name">
@@ -130,18 +128,18 @@
                 </div>
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="persona.jpg" alt="">
+                        <img src="Isabelly2.jpeg" alt="">
                     </div>
 
                     <div class="card-name">
-                        <h4>Ana Ysabelly</h4>
+                        <h4>Ana Isabelly</h4>
                         <h5>Artes</h5>
                     </div>
 
                 </div>
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="persona.jpg" alt="">
+                        <img src="Thallysson.jpeg" alt="">
                     </div>
 
                     <div class="card-name">
@@ -152,7 +150,7 @@
                 </div>
                 <div class="arquitetos-card">
                     <div class="card-photo">
-                        <img src="persona.jpg" alt="">
+                        <img src="Gustavo2.jpeg" alt="">
                     </div>
 
                     <div class="card-name">
@@ -203,20 +201,20 @@
                 </div>
             </div>
         </section>
-        <section class="game">
+        <section id="game" class="game">
             <div class="text">
                 <h2>Vislumbre o Game</h2>
                 <p>O DeltaRPG é um jogo inovador que transforma o aprendizado de matemática em uma aventura envolvente e divertida. Esqueça as aulas tradicionais e as fórmulas decoradas; com o DeltaRPG, você resolve desafios matemáticos dentro de um universo de fantasia, onde cada acerto te leva mais longe na sua jornada.</p>
             </div>
             <div class="game-cards">
                 <div class="game-card">
-                    <img src="Banner.jpg" alt="">
+                    <img src="Menu Inicial.png" alt="">
                 </div>
                 <div class="game-card">
-                    <img src=Banner.jpg alt="">
+                    <img src="Jogo.png" alt="">
                 </div>
                 <div class="game-card">
-                    <img src="Banner.jpg" alt="">
+                    <img src="Diálogo com Macyrajara.png" alt="">
                 </div>
             </div>
         </section>
@@ -226,7 +224,7 @@
             <a href="https://itch.io/" target="_blank" title="Itch.io">
                 <i class="bi bi-controller"></i>
             </a>
-            <a href="https://instagram.com/" target="_blank" title="Instagram">
+            <a href="https://www.instagram.com/deltarpgpi/" target="_blank" title="Instagram">
                 <i class="bi bi-instagram"></i>
             </a>
             <a href="https://github.com/" target="_blank" title="GitHub">
