--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <div class="cta-buttons">
-            <button class="btn-primary">Jogar Agora</button>
+            <button class="btn-primary"><a href="https://deltarpg.itch.io/delta-rpg">Jogar Agora</button>
         </div>
         
     </header>
