--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Matemática não precisa ser um monstro. Pode ser uma jornada!</h1>
             <p>Embarque em uma aventura épica de RPG e use o poder dos números para mudar tudo, derrotar a dificuldade e se tornar uma lenda.</p>
             <div>
-                <button class="btn-primary">Jogar DeltaRpg</button>
+                <button class="btn-primary"><a href="https://deltarpg.itch.io/delta-rpg">Jogar DeltaRpg</a></button>
                 <!-- <button class="btn-secondary">Assista ao Trailer</button> -->
             </div>
         </div>
