--- a/index.html
+++ b/index.html
@@ -10,21 +10,27 @@
 
     <style>
         /* Ajuste opcional para o seletor de idioma aparecer discretamente */
-        #google_translate_element {
-            margin-left: 15px;
-            display: inline-block;
-        }
+       .language-switcher {
+    display: flex;
+    gap: 10px;
+    margin-left: 15px;
+}
 
-        /* Remove branding extra do Google, deixa mais limpo */
-        .goog-logo-link {
-            display: none !important;
-        }
-        .goog-te-gadget {
-            font-size: 0 !important;
-        }
-        .goog-te-gadget span {
-            display: none;
-        }
+.lang-btn {
+    background: #007bff;
+    color: white;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+    transition: 0.2s;
+}
+
+.lang-btn:hover {
+    background: #0056b3;
+}
     </style>
 </head>
 <body>
@@ -39,7 +45,10 @@
                 <li><a href="#community">Comunidade</a></li>
             </ul>
         </nav>
-
+    <div class="language-switcher">
+        <button onclick="translateTo('pt')" class="lang-btn">🇧🇷 PT</button>
+        <button onclick="translateTo('en')" class="lang-btn">🇺🇸 EN</button>
+    </div>
         <!-- 🔵 Seletor de idioma inserido aqui -->
         <div id="google_translate_element"></div>
 
@@ -262,19 +271,36 @@
 
     <!-- Script do Google Translate — necessário para funcionar -->
     <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-                pageLanguage: 'pt',
-                includedLanguages: 'en',
-                layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
-            }, 'google_translate_element');
-        }
-    </script>
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+            pageLanguage: 'pt',
+            includedLanguages: 'pt,en',
+            autoDisplay: false
+        }, 'google_translate_placeholder');
+    }
 
-    <script type="text/javascript" 
-            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-    </script>
+    function translateTo(lang) {
+        const select = document.querySelector(".goog-te-combo");
+        if (select) {
+            select.value = lang;
+            select.dispatchEvent(new Event("change"));
+        }
+    }
+</script>
+
+<!-- Script escondido do Google Translate -->
+<div id="google_translate_placeholder" style="display:none;"></div>
+
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+<!-- Oculta a barra Google -->
+<style>
+    .goog-logo-link { display: none !important; }
+    .goog-te-gadget { font-size: 0 !important; }
+    body > .skiptranslate { display: none !important; }
+</style>
 
 </body>
 </html>
+
 
