--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
         </nav>
     <div class="language-switcher">
-        <button onclick="translateTo('pt')" class="lang-btn">🇧🇷 PT</button>
+        <button onclick="translateTo('pt')" class="lang-btn">🇧🇷 PT-BR</button>
         <button onclick="translateTo('en')" class="lang-btn">🇺🇸 EN</button>
     </div>
         <!-- 🔵 Seletor de idioma inserido aqui -->
@@ -302,5 +302,6 @@
 
 </body>
 </html>
+
 
 
