--- a/index.html
+++ b/index.html
@@ -10,19 +10,31 @@
 
     <style>
         /* Ajuste opcional para o seletor de idioma aparecer discretamente */
-.flag-icon {
-    width: 20px;
-    height: 14px;
-    margin-right: 6px;
-    border-radius: 2px;
-    object-fit: cover;
+.language-switcher {
+    display: flex;
+    gap: 10px;
 }
 
-.lang-btn {
-    display: flex;
-    align-items: center;
-    gap: 6px;
+.lang-flag-btn {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    transition: transform 0.2s;
 }
+
+.lang-flag-btn:hover {
+    transform: scale(1.15);
+}
+
+.flag-icon {
+    width: 32px;
+    height: 22px;
+    border-radius: 4px;
+    object-fit: cover;
+    border: 1px solid #ccc;
+}
+
 
     </style>
 </head>
@@ -39,14 +51,13 @@
             </ul>
         </nav>
     <div class="language-switcher">
-    <button onclick="translateTo('pt')" class="lang-btn">
-        <img src="https://flagcdn.com/w20/br.png" alt="Brasil" class="flag-icon">
-    </button>
-
-    <button onclick="translateTo('en')" class="lang-btn">
-        <img src="https://flagcdn.com/w20/us.png" alt="USA" class="flag-icon">
-    </button>
-</div>
+        <button onclick="translateTo('pt')" class="lang-flag-btn">
+            <img src="https://flagcdn.com/w20/br.png" alt="BR" class="flag-icon">
+        </button>
+        <button onclick="translateTo('en')" class="lang-flag-btn">
+            <img src="https://flagcdn.com/w20/us.png" alt="EN" class="flag-icon">
+        </button>
+    </div>
         <!-- 🔵 Seletor de idioma inserido aqui -->
         <div id="google_translate_element"></div>
 
@@ -300,6 +311,7 @@
 
 </body>
 </html>
+
 
 
 
